# vortenix-newsletter

./: .env.example  .gitignore  .markdownlint-cli2.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  FAQ.md  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_REVIEW.md  README.md  ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: DISCUSSION_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  daily-newsletter.yml  docs.yml
config/: application.yaml  audiences.yaml  sources.yaml  subscribers.example.yaml
config/verticals/: ai_infrastructure.yaml  finance.yaml  semiconductors.yaml  technology_radar.yaml
docs/: README.md
docs/adr/: 0001-modular-monolith.md  0002-provider-abstraction.md  0003-yaml-configuration.md  0004-deterministic-analysis.md  README.md
docs/development/: error-handling.md  extensions.md  logging.md  setup.md
docs/reference/: cli.md  public-api.md
docs/user-guide/: configuration.md  llm-research.md  scheduling.md  workflow.md
examples/: README.md  minimal-vertical.yaml  sample-audience.yaml  sample-connector.py  sample-vertical.py  sample-workflow.py
scripts/: clean.py  run_scheduled_newsletters.ps1  validate_docs.py
src/vortenix_newsletter/: __init__.py  main.py
src/vortenix_newsletter/cli/: app.py
src/vortenix_newsletter/config/: __init__.py  loader.py  models.py
src/vortenix_newsletter/domain/: enums.py  exceptions.py  models.py
src/vortenix_newsletter/ingestion/: __init__.py  api_connectors.py  base.py  deduplicator.py  reddit_connector.py  registry.py  rss_connector.py
src/vortenix_newsletter/newsletter/: __init__.py  composer.py  renderer.py  service.py
src/vortenix_newsletter/persistence/: __init__.py  database.py  orm_models.py  repositories.py
src/vortenix_newsletter/research/: llm_analyser.py  llm_models.py  ranker.py  validator.py
tests/: test_core.py
tests/fixtures/: sample.rss
(+22 files in other folders)
